# NTUST-pyeng

./: .gitignore  README.md  eslint.config.mjs  next.config.ts  open-next.config.ts  package-lock.json  package.json  tailwind.config.js  tsconfig.json  wrangler.jsonc
python-backend/: pyproject.toml  requirements.txt  run_apps.py  start.sh
python-backend/auto_fetch_practice/: README.md  _form_brute_demo.py  app.py  form_brute_demo.py  processed_urls.json
python-backend/auto_fetch_practice/lib/: DbAdder.py  FormExtractor.py  FormSubmitter.py
python-backend/auto_fetch_practice/web_demo/: app.py
python-backend/auto_fetch_practice/web_demo/public/: _index.html  index.html  pvqc-part-5.html  toefl-week-11.html
python-backend/backend/: 1131_data.db  README.md  app.py  data.db  database.py  models.py  schemas.py
python-backend/manual_insert_word/: InsertWordsAPI.py  README.md
python-backend/manual_insert_word/training/1/: academic.json  calculus.json  ielts.json  pvqc-bm.json  pvqc-dmd.json  pvqc-ee.json  pvqc-ict.json  pvqc-me.json  toefl.json
python-backend/manual_insert_word/training/10/: academic.json  calculus.json  ielts.json  toefl.json
python-backend/manual_insert_word/training/11/: calculus.json  ielts.json
python-backend/manual_insert_word/training/2/: academic.json  calculus.json  ielts.json  pvqc-bm.json  pvqc-dmd.json  pvqc-ee.json  pvqc-ict.json  pvqc-me.json  toefl.json
python-backend/manual_insert_word/training/3/: academic.json  calculus.json  ielts.json  pvqc-bm.json  pvqc-dmd.json  pvqc-ee.json  pvqc-ict.json  pvqc-me.json  toefl.json
(+57 files in other folders)
