[project]
name = "python-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "annotated-types==0.7.0",
    "anyio==4.7.0",
    "apscheduler==3.11.0",
    "beautifulsoup4==4.12.3",
    "certifi==2024.12.14",
    "charset-normalizer==3.4.0",
    "click==8.1.7",
    "fastapi==0.115.6",
    "greenlet==3.1.1",
    "h11==0.14.0",
    "httpx==0.28.1",
    "idna==3.10",
    "pydantic==2.10.3",
    "pydantic-core==2.27.1",
    "python-dotenv==1.0.1",
    "requests==2.32.3",
    "selectolax>=0.4.7",
    "sniffio==1.3.1",
    "soupsieve==2.6",
    "sqlalchemy==2.0.36",
    "starlette==0.41.3",
    "textdistance~=4.6.3",
    "tqdm==4.67.1",
    "trafilatura>=2.0.0",
    "typing-extensions==4.12.2",
    "tzlocal==5.2",
    "urllib3==2.2.3",
    "uvicorn==0.34.0",
]
