[project]
name = "python-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "apscheduler>=3.11.3",
    "beautifulsoup4>=4.15.0",
    "fastapi>=0.139.0",
    "httpx>=0.28.1",
    "pydantic>=2.13.4",
    "python-dotenv>=1.2.2",
    "requests>=2.34.2",
    "selectolax>=0.4.7",
    "sqlalchemy>=2.0.51",
    "starlette>=1.3.1",
    "textdistance>=4.6.3",
    "tqdm>=4.68.4",
    "trafilatura>=2.0.0",
    "uvicorn>=0.51.0",
]
